src/directoryEntry.h
@@ -1,0 +1,14 @@
+// SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
+// SPDX-FileCopyrightText: 2022 Harald Sitter <sitter@kde.org>
+
+#pragma once
+
+#include <QByteArray>
+
+struct DirectoryEntry {
+    QByteArray name;
+    bool isSkipable = true;
+    bool isDir = false;
+    bool isFile = false;
+    size_t size = 0;
+};
